<resources>
    <string name="app_name">Q&amp;A</string>
    <string name="total_question">total question</string>
    <string name="question">question</string>
    <string name="this_is_a_question">this is a question</string>
    <string name="ans_1">ans 1</string>
    <string name="ans_2">ans 2</string>
    <string name="ans_3">ans 3</string>
    <string name="ans_4">ans 4</string>
    <string name="submet">Submet</string>
    <string name="submit">submit</string>
    <string name="total_questions">total questions</string>
    <string name="restart">restart</string>
</resources>